k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partsandparcel
  labels:
    app.kubernetes.io/name: partsandparcel
    app.kubernetes.io/environment: production
