k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pp-web-service
  namespace: partsandparcel
  labels:
    app.kubernetes.io/name: partsandparcel
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app: pp-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
